[gd_scene load_steps=10 format=3 uid="uid://wm4wgf60hj6f"]

[ext_resource type="Script" path="res://Scripts/LaserProjectile.gd" id="1_fna8v"]
[ext_resource type="Texture2D" uid="uid://cdcl36x1s34cs" path="res://Sprites/LaserShotFrame1.png" id="2_54cq7"]
[ext_resource type="Texture2D" uid="uid://dwc4pgtdqqqsw" path="res://Sprites/LaserShotFrame2.png" id="3_u4qqk"]
[ext_resource type="PackedScene" uid="uid://dntxntn76kbu" path="res://Components/hitbox_component.tscn" id="4_sa8xr"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5ha3k"]
frames = 2
speed_scale = 5.0
frame_0/texture = ExtResource("2_54cq7")
frame_0/duration = 0.1
frame_1/texture = ExtResource("3_u4qqk")
frame_1/duration = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w43u1"]
size = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_44vla"]
resource_name = "FadeTelegraphOut"
length = 0.75
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"clear_telegraph"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Telegraph:default_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.258824, 1, 0.572549, 1), Color(0.258824, 1, 0.572549, 0)]
}

[sub_resource type="Animation" id="Animation_q1gb5"]
resource_name = "FadeLaserOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Laser:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"remove_laser"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_md1c5"]
_data = {
"FadeLaserOut": SubResource("Animation_q1gb5"),
"FadeTelegraphOut": SubResource("Animation_44vla")
}

[node name="LaserProjectile" type="Node2D"]
script = ExtResource("1_fna8v")

[node name="TelegraphTimer" type="Timer" parent="."]
one_shot = true

[node name="Laser" type="Line2D" parent="."]
texture_filter = 1
texture_repeat = 2
texture = SubResource("AnimatedTexture_5ha3k")
texture_mode = 1

[node name="HitboxComponent" parent="Laser" instance=ExtResource("4_sa8xr")]
collision_layer = 2
collision_mask = 8
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Laser/HitboxComponent"]
shape = SubResource("RectangleShape2D_w43u1")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_md1c5")
}

[node name="Telegraph" type="Line2D" parent="."]
points = PackedVector2Array(11, 2)
width = 2.0
default_color = Color(0.258824, 1, 0.572549, 1)

[node name="LaserPersistence" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TelegraphTimer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="LaserPersistence" to="." method="_on_laser_persistence_timeout"]
